Updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Jacob Carvell",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ScottSmith95/Decode-for-Ghost.git"
+    "url": "https://github.com/jacobcarvell/decrypt"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.1.8",
